# PlausiDen-Atrium

./: .composition-baseline.json  .gitignore  BLEACHBIT_INTEGRATION.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  deny.toml
.github/: dependabot.yml
.github/workflows/: security.yml
assets/: atrium.desktop
scripts/: install.sh
src/: app.rs  config.rs  disk_wipe.rs  docs.rs  file_manager.rs  forensic.rs  formats.rs  loom_tokens.rs  main.rs  theme.rs  wipe_config.rs  wipe_runner.rs
src/pages/: docs.rs  home.rs  mod.rs  purge.rs  settings.rs  tidy.rs  tools.rs
src/widgets/: badge.rs  card.rs  duration.rs  mod.rs  size_bar.rs
