[package]
name = "plausiden-atrium"
version = "0.1.0"
edition = "2024"
description = "Unified desktop frontend for the PlausiDen tool suite — hosts Tidy, Purge, and disk analyzers in one approachable interface."
license = "AGPL-3.0-or-later"
repository = "https://github.com/redcaptian1917/PlausiDen-Atrium"
readme = "README.md"
keywords = ["gui", "cleanup", "privacy", "plausiden", "civil-rights"]
categories = ["gui", "filesystem"]

[[bin]]
name = "atrium"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.29"
egui_extras = { version = "0.29", features = ["all_loaders"] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
walkdir = "2.5"
chacha20poly1305 = "0.10"
rand = "0.8"
zeroize = { version = "1.8", features = ["zeroize_derive"] }

plausiden-tidy = { path = "../PlausiDen-Tidy" }
